--- a/frontend/src/app/componentes/login/login.component.html
+++ b/frontend/src/app/componentes/login/login.component.html
@@ -1,32 +1,35 @@
-<div class="login-container d-flex justify-content-center align-items-center vh-100">
-    <div class="login-box p-4 bg-white rounded shadow">
-      <img src="assets/imagenes/logo.png" alt="Logo" class="logo mb-4 mx-auto d-block">
-      <h2 class="text-center mb-4">Iniciar Sesión</h2>
-      <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
-        <div class="form-group mb-3">
-          <input type="text" 
-                 [(ngModel)]="username" 
-                 name="nombreUsuario"
-                 class="form-control" 
-                 placeholder="Usuario" 
-                 required
-                 [disabled]="loading">
-        </div>
-        <div class="form-group mb-3">
-          <input type="password" 
-                 [(ngModel)]="password" 
-                 name="contraseña" 
-                 class="form-control" 
-                 placeholder="Contraseña" 
-                 required
-                 [disabled]="loading">
-        </div>
-        <div class="alert alert-danger" *ngIf="error">{{error}}</div>
-        <button type="submit" 
-                class="btn btn-primary w-100"
-                [disabled]="loading || !loginForm.form.valid">
-          {{loading ? 'Iniciando sesión...' : 'Iniciar Sesión'}}
-        </button>
-      </form>
-    </div>
+<div class="login-container animate__animated animate__fadeIn">
+  <div class="login-box">
+    <img src="../../../assets/imagenes/Logo.png" alt="Logo" class="logo mb-4">
+    <h2>Iniciar Sesión</h2>
+    <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+      <div class="form-floating mb-3">
+        <input type="text" 
+               class="form-control" 
+               id="username"
+               [(ngModel)]="username" 
+               name="nombreUsuario"
+               placeholder="Usuario"
+               required>
+        <label for="username">Usuario</label>
+      </div>
+      
+      <div class="form-floating mb-4">
+        <input type="password" 
+               class="form-control" 
+               id="password"
+               [(ngModel)]="password" 
+               name="contrasena"
+               placeholder="Contraseña"
+               required>
+        <label for="password">Contraseña</label>
+      </div>
+
+      <button type="submit" 
+              class="btn custom-btn-submit w-100"
+              [disabled]="!loginForm.form.valid">
+        Iniciar Sesión
+      </button>
+    </form>
   </div>
+</div>
