--- a/frontend/src/app/componentes/navbar/navbar.component.html
+++ b/frontend/src/app/componentes/navbar/navbar.component.html
@@ -1,34 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="assets/imagenes/logo.png" alt="Logo" height="40">
-      </a>
+<nav class="navbar navbar-expand-lg custom-navbar animate__animated animate__fadeIn">
+  <div class="container">
+    <a class="navbar-brand" routerLink="/">
+      <img src="../../../assets/imagenes/Logo.png" alt="Logo" height="40">
+    </a>
+    
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/">Inicio</a>
+        </li>
+      </ul>
       
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/">Inicio</a>
-          </li>
-        </ul>
+      <div class="d-flex">
+        <ng-container *ngIf="authService.estaLogueado; else botonLogin">
+          <span class="nav-text me-3">{{authService.usuario.nombreUsuario}}</span>
+          <button class="btn btn-outline-danger custom-btn-logout" (click)="cerrarSesion()">
+            Cerrar Sesión
+          </button>
+        </ng-container>
         
-        <div class="d-flex">
-          <ng-container *ngIf="authService.estaLogueado; else botonLogin">
-            <span class="nav-text me-3">{{authService.usuario.nombreUsuario}}</span>
-            <button class="btn btn-outline-danger" (click)="cerrarSesion()">
-              Cerrar Sesión
-            </button>
-          </ng-container>
-          
-          <ng-template #botonLogin>
-            <a class="btn btn-primary" routerLink="/login">
-              Iniciar Sesión
-            </a>
-          </ng-template>
-        </div>
+        <ng-template #botonLogin>
+          <a class="btn custom-btn-login" routerLink="/login">
+            Iniciar Sesión
+          </a>
+        </ng-template>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
