--- a/frontend/src/app/componentes/navbar/navbar.component.html
+++ b/frontend/src/app/componentes/navbar/navbar.component.html
@@ -31,6 +31,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="experto/puntuaciones">Gestionar Puntuaciones</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="experto/pruebas">Gestionar Pruebas</a>
+          </li>
         </ng-container>
       </ul>
       
@@ -41,11 +44,11 @@
               <i class="fas fa-user"></i>
             </div>
             <div class="user-info">
-              <span class="username">{{authService.usuario.username}}</span>
-              <span class="role">{{authService.usuario.role === 'ROLE_ADMIN' ? 'Administrador' : 'Experto'}}</span>
+              <span class="username">{{authService.getNombreCompleto()}}</span>
+              <small class="role">{{authService.getRol() === 'ROLE_ADMIN' ? 'Administrador' : 'Experto'}}</small>
             </div>
-            <button class="btn custom-btn-logout" (click)="cerrarSesion()">
-              <i class="bi bi-box-arrow-right"></i>
+            <button class="custom-btn-logout" (click)="cerrarSesion()">
+              <i class="fas fa-sign-out-alt"></i>
             </button>
           </div>
         </ng-container>
