--- a/frontend/src/app/componentes/navbar/navbar.component.html
+++ b/frontend/src/app/componentes/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg custom-navbar animate__animated animate__fadeIn">
   <div class="container">
     <a class="navbar-brand" routerLink="/">
-      <img src="assets/logo.png" alt="Logo" height="40" class="d-inline-block align-top">
+      <img src="assets/Logo.png" alt="Logo" height="40" class="d-inline-block align-top">
     </a>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
